--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,30 @@
 <html>
 <head>
   <title>Impartial</title>
+
+   <!-- Sets initial viewport load and disables zooming  -->
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+
+    <!-- Include the compiled Ratchet CSS -->
+    <link href="ratchet-v2.0.2/css/ratchet.css" rel="stylesheet">
+    <link rel="stylesheet" href="http://goratchet.com/dist/css/ratchet.min.css">
+    <link rel="stylesheet" href="http://goratchet.com/dist/css/ratchet-theme-ios.min.css">
+    <link rel="stylesheet" href="http://goratchet.com/examples/app-ios-mail/css/app.css">
+    <script src="http://goratchet.com/dist/js/ratchet.min.js"></script>
+    <!-- Include the compiled Ratchet JS -->
+    <script src="assets/ratchet-v2.0.2/js/ratchet.js"></script>
+    <!-- Latest compiled and minified CSS -->
+		<link rel="stylesheet" href="http://getbootstrap.com/dist/css/bootstrap.min.css">
+
+		<!-- Optional theme -->
+		<link rel="stylesheet" href="http://getbootstrap.com/assets/css/docs.min.css">
+
+		<!-- Latest compiled and minified JavaScript -->
+		<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+  
+  
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
