--- a/app/views/quizes/index.html.erb
+++ b/app/views/quizes/index.html.erb
@@ -1,17 +1,17 @@
 <h1>Quizes</h1>
 
 <form action="/quizes/" method ="post" name="quiz">
-  <input type="hidden" name="category" value="Issue1">
+  <input type="hidden" name="category" value="Issue_1">
   <button id="submit1"type="submit"> Issue 1 </button>
 </form>
 
 <form action="/quizes/" method ="post" >
-  <input type="hidden" name="category" value="Issue2">
+  <input type="hidden" name="category" value="Issue_2">
   <button id="submit1"type="submit"> Issue 2 </button>
 </form>
 
 <form action="/quizes/" method ="post" >
-  <input type="hidden" name="category" value="Issue3">
+  <input type="hidden" name="category" value="Issue_3">
   <button id="submit1"type="submit"> Issue 3 </button>
 </form>
 
