--- a/app/views/quizes/show.html.erb
+++ b/app/views/quizes/show.html.erb
@@ -11,13 +11,16 @@
 
     <!-- Wrap all non-bar HTML in the .content div (this is actually what scrolls) -->
     <div class="content">
+    <% @quiz.questions.each do |question| %>
 
       <div class="big-quote">  
         <div class="textfill">
-          "If you're walking down the right path and you're willing to keep walking."
+          <%= question.quote%>
         </div>
       </div>
-      
+
+    <%end%>
+
     <div id="div-buttons">
       <button id="agree-button" class="btn btn-primary ">&#x2713;</button>
       <div id="padding-btw-AD"></div>
@@ -25,7 +28,7 @@
     </div>
 
       <div id="progress-div" class="progress progress-warning active">
-        <div id "short-bar" class="progress-bar" 
+        <div id "short-bar" class="progress-bar"
           role="progressbar"
           aria-valuenow="60"
           aria-valuemin="0"
