seperated css from ratchet, removed js from quote display

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,13 +9,15 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
     <!-- Include the compiled Ratchet CSS -->
-    <link href="ratchet-v2.0.2/css/ratchet.css" rel="stylesheet">
+    <!-- <link href="ratchet-v2.0.2/css/ratchet.css" rel="stylesheet"> -->
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <link rel="stylesheet" href="http://goratchet.com/dist/css/ratchet.min.css">
     <link rel="stylesheet" href="http://goratchet.com/dist/css/ratchet-theme-ios.min.css">
     <link rel="stylesheet" href="http://goratchet.com/examples/app-ios-mail/css/app.css">
+    
     <script src="http://goratchet.com/dist/js/ratchet.min.js"></script>
     <!-- Include the compiled Ratchet JS -->
-    <script src="assets/ratchet-v2.0.2/js/ratchet.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/ratchet/2.0.2/js/ratchet.js"></script>
     <!-- Latest compiled and minified CSS -->
 		<link rel="stylesheet" href="http://getbootstrap.com/dist/css/bootstrap.min.css">
 
