--- a/app/views/quizes/show.html.erb
+++ b/app/views/quizes/show.html.erb
@@ -11,19 +11,28 @@
 
     <!-- Wrap all non-bar HTML in the .content div (this is actually what scrolls) -->
     <div id="main-box" class="content">
-    
-       
+
+
       <% @quiz.questions.each_with_index do |question, index|  %>
         <% if index != 0 %>
           <div id="question_<%= question.id %>" class="textfill hidden">
             <%= question.quote%>
+          <form action="/quizes/" method ="post" >
+            <input type='hidden' name='_method' value='put'>
+            <input type="hidden" id="question_id" name="question_id" value="<%=question.id%>">
+            <button id="agree-button"  type="submit" class="btn btn-primary ">&#x2713;</button>
+              <div id="padding-btw-AD"></div>
+            <button id="disagree-button" class="btn btn-primary ">X</button>
+          </form>
+
           </div>
-        <% else %> 
+
+        <% else %>
           <div id="question_<%= question.id %>" class="textfill">
             <%= question.quote%>
           </div>
         <% end %>
-       
+
       <%end%>
 
     <div id="div-buttons">
