--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -53,7 +53,7 @@
 
     width: 190px;
     height: 190px;
-    
+
     position: absolute;
     top:30px;
     bottom: 0;
@@ -68,7 +68,7 @@
 }
 
 #party-label {
-  
+
   font-weight: bold;
   text-align: center;;
   background-color: none;
@@ -80,7 +80,7 @@
 }
 
 #quote-label {
-  
+
   font-weight: bold;
   text-align: center;;
   background-color: none;
@@ -102,8 +102,8 @@ span.glyphicon-stats {
     bottom: 20px;
     left: 10px;
     margin: auto;
-    
-    
+
+
 }
 
 
@@ -169,14 +169,14 @@ span.glyphicon-stats {
 #div-buttons{
   width: 300px;
   height: 190px;
-  
+
   position: absolute;
   top:400px;
   bottom: 0;
   left: 0;
   right: 0;
 
-  margin: auto;  
+  margin: auto;
 
 }
 
@@ -198,6 +198,7 @@ span.glyphicon-stats {
 
 .hidden {
   display: none;
+  visibility: none;
 }
 
 
