issues buttons, others

--- a/app/views/choose-party.html.erb
+++ b/app/views/choose-party.html.erb
@@ -1,5 +1,3 @@
-<h1>choose-party.html.erb</h1>
-
  <!--ALL class code - Shana -->
     <!-- Make sure all your bars are the first things in your <body> -->
     <header class ="bar bar-nav">
@@ -7,7 +5,7 @@
         <div id = "app-name"> IMPARTIAL </div>
       </div>
       <button id = "profile-button"> <span id = "icon-profile" class="icon icon-person"></span> </button>
-      <button id="stats-button"><span class="glyphicon glyphicon-stats"></span></button>
+      <button id="stats-button"><span class="glyphicon glyphicon-th"></span></button>
     </header>
 
 
