--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,6 +34,8 @@
 
 </head>
 <body>
+		<a href="profile-view.html"><img src="assets/landing.png" style="width:100%;height:100%;" />BOOM</a>
+
 
 	<div id="user-widget">
 	  <% if current_user %>
