--- a/app/views/quizes/show.html.erb
+++ b/app/views/quizes/show.html.erb
@@ -5,7 +5,7 @@
         <div id = "app-name"> IMPARTIAL </div>
       </div>
       <button id = "profile-button"> <span id = "icon-profile" class="icon icon-person"></span> </button>
-      <button id="stats-button"><span class="glyphicon glyphicon-stats"></span></button>
+      <button id="stats-button"><span class="glyphicon glyphicon-th"></span></button>
     </header>
 
 
@@ -32,7 +32,9 @@
       <button id="disagree-button" class="btn btn-primary ">X</button>
     </div>
 
-      <div id="progress-div" class="progress progress-warning active">
+
+    <!-- PROGRESS BAR IN THE QUIZ -->
+    <!--   <div id="progress-div" class="progress progress-warning active">
         <div id "short-bar" class="progress-bar"
           role="progressbar"
           aria-valuenow="60"
@@ -41,4 +43,5 @@
           style="width: 60%;background-color:rgb(206, 60, 63)">
         </div>
       </div>
+     -->
     </div>
