--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -19,13 +19,15 @@
 #profile-button {
   width: 40px;
   height: 40px;
-  padding-left: 10px;
+  float:right;
+  
 }
 
 #stats-button {
   width: 40px;
   height: 40px;
-  float:right;
+  padding-left: 10px;
+  
 }
 
 #dem-button {
@@ -91,7 +93,7 @@
 
 }
 
-span.glyphicon-stats {
+span.glyphicon-th {
     font-size: 1.7em;
     color: white;
 }
@@ -191,10 +193,99 @@ span.glyphicon-stats {
 
 #table-div{
   position: absolute;
-    bottom: 20px;
-    left: 10px;
-    margin: auto;
+  bottom: 20px;
+  left: 15px;
+  margin: auto;
 }
+
+#sets-button-small{
+  background-color: rgb(206, 60, 63);
+  color: white;
+  width: 140px;
+  height: 70px;
+  font-size: 16px;
+  margin-bottom: 14px;
+  border-radius: 10px;
+  border-color: rgb(206, 60, 63);
+  text-align: center;
+
+}
+
+
+#table-div-set{
+  position: absolute;
+  bottom: 40px;
+  left: 10px;
+  margin: auto;
+  padding-left: 6.5px;
+}
+
+#select-label {
+  padding-top: 21px;
+  text-align: center;
+  font-size: 19px;
+  font-weight: bold;
+}
+
+#quizzes-title {
+  padding-top: 21px;
+  text-align: center;
+  font-size: 22px;
+  font-weight: bold;
+}
+
+
+#pic-info {
+  padding-top: 10px;
+}
+
+#profile-pic {
+  width: 140px;
+  height: 140px;
+}
+
+#profile-title {
+
+  padding-top: 30px;
+  text-align: center;
+  font-size: 30px;
+  padding-bottom: 10px;
+}
+
+
+#sets-button-big{
+  background-color: rgb(53, 118, 190);
+  color: white;
+  width: 190px;
+  height: 40px;
+  font-size: 16px;
+  margin-bottom: 10px;
+  border-radius: 10px;
+  border-color: rgb(53, 118, 190);
+  text-align: center;
+
+}
+
+#table-div-profile{
+  position: absolute;
+    bottom: 20px;
+    left: 60px;
+    margin: auto;
+    padding-left: 6.5px;
+}
+
+#personal-info {
+  width: 140px;
+  height: 200px;
+  position: absolute;
+  top:120px;
+  bottom: 0;
+  right: 15px;
+  text-align: left;
+  color: black;
+
+}
+
 
 .hidden {
   display: none;
