--- a/app/views/quizes/index.html.erb
+++ b/app/views/quizes/index.html.erb
@@ -4,8 +4,8 @@
       <div id = "nav-bar" class ="title">
         <div id = "app-name"> IMPARTIAL </div>
       </div>
-      <button id = "profile-button"> <span id = "icon-profile" class="icon icon-person"></span> </button>
-      <button id="stats-button"><span class="glyphicon glyphicon-th"></span></button>
+    <a href= "/sessions/profile"><button id = "profile-button"> <span id = "icon-profile" class="icon icon-person"></span> </button></a>
+      <!-- <button id="stats-button"><span class="glyphicon glyphicon-th"></span></button> -->
     </header>
 
 
