--- a/app/views/quizes/splash.html.erb
+++ b/app/views/quizes/splash.html.erb
@@ -1,15 +1,5 @@
-<%= link_to(image_tag("/assets/landing.png"), "http://www.google.com") %> 
-
-link_to(image_tag("/images/index_promo_long.png", :alt => "Promo
-Image"), "http://www.example.com")
-
-  <!-- <img src="assets/landing.png" style="width:100%;height:100%;" /> root_path %> -->
-
-
-link_to image_tag("/assets/landing.png", :border => 0), 
-
-
-
-<%= link_to href: 'http://www.google.com/' do %>
-    <%= image_tag '/assets/landing.png' %>
-<% end %>
+<div class="splash-image">
+	<button > 
+	<%= link_to(image_tag("/assets/landing.png"), "/login") %>
+	</button>
+</div>
