--- a/app/views/quizes/index.html.erb
+++ b/app/views/quizes/index.html.erb
@@ -13,19 +13,19 @@
     <div class="content">
       <div id = "quizzes-title" >QUIZZES</div>
       <div id = "select-label" >SELECT YOUR QUIZ</div>
-      <div id = "table-div"> 
+      <div id = "table-div">
         <table style="width:300px">
 
           <tr>
             <td>
             	<form action="/quizes/" method ="post" name="quiz">
-            		<input type="hidden" name="category" value="Issue_1">
+            		<input type="hidden" name="category" value="abortion">
             		<button id="sets-button-small" type="submit" class="btn btn-primary">ABORTION</button>
             	</form>
             </td>
             <td>
             	<form action="/quizes/" method ="post" name="quiz">
-            		<input type="hidden" name="category" value="Issue_2">
+            		<input type="hidden" name="category" value="economoy">
 	            	<button id="sets-button-small" type="submit" class="btn btn-primary">BUDGET &amp;<br> ECONOMY</button>
 	            </form>
             </td>
@@ -34,28 +34,28 @@
           <tr>
             <td>
             	<form action="/quizes/" method ="post" name="quiz">
-            		<input type="hidden" name="category" value="Issue_3">
+            		<input type="hidden" name="category" value="environment">
 	            	<button id="sets-button-small" type="submit" class="btn btn-primary">ENVIRONMENT</button>
 	            </form>
             </td>
             <td>
             	<form action="/quizes/" method ="post" name="quiz">
-            		<input type="hidden" name="category" value="Issue_4">
+            		<input type="hidden" name="category" value="foreign policy">
 	            	<button id="sets-button-small" type="submit" class="btn btn-primary">FOREIGN<br>POLICY</button>
 	            </form>
-            </td> 
+            </td>
           </tr>
 
           <tr>
             <td>
             	<form action="/quizes/" method ="post" name="quiz">
-              	<input type="hidden" name="category" value="Issue_5">
+              	<input type="hidden" name="category" value="health care">
 	            	<button id="sets-button-small" type="submit" class="btn btn-primary">HEALTH<br>CARE</button>
 	            </form>
             </td>
             <td>
             	<form action="/quizes/" method ="post" name="quiz">
-            		<input type="hidden" name="category" value="Issue_6">
+            		<input type="hidden" name="category" value="immigration">
 	            	<button id="sets-button-small" type="submit" class="btn btn-primary">IMMIGRATION</button>
 	            </form>
             </td>
@@ -64,13 +64,13 @@
            <tr>
             <td>
             	<form action="/quizes/" method ="post" name="quiz">
-            		<input type="hidden" name="category" value="Issue_1">
+            		<input type="hidden" name="category" value="jobs">
 	            	<button id="sets-button-small" type="submit" class="btn btn-primary">JOBS</button>
             	</form>
             </td>
             <td>
             	<form action="/quizes/" method ="post" name="quiz">
-            		<input type="hidden" name="category" value="Issue_1">
+            		<input type="hidden" name="category" value="social security">
             		<button id="sets-button-small" type="submit" class="btn btn-primary">SOCIAL<br>SECURITY</button>
             	</form>
             </td>
